fixed overflow of movie summaries.

--- a/main.css
+++ b/main.css
@@ -161,6 +161,7 @@ body {
 
 .movie-information {
     box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .main-movie-poster {
